--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,15 @@
 
 <head>
 	<meta charset='utf-8'>
-	<meta name='viewport' content='width=device-width,initial-scale=1'>
+
+	<meta name="viewport"
+		content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+	<meta name="format-detection" content="telephone=no" />
+	<meta name="msapplication-tap-highlight" content="no" />
+
+	<!-- add to homescreen for ios    -->
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 	<title>Ionic Svelte App</title>
 
@@ -11,7 +19,13 @@
 	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
+
+	<link rel="icon" type="image/png" href="/favicon.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
 	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
+	<link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
+
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
