--- a/public/index.html
+++ b/public/index.html
@@ -19,20 +19,25 @@
 	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
-
+	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="icon" type="image/png" href="/favicon.png" sizes="16x16" />
 	<link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
-	<link rel='icon' type='image/png' href='/favicon.png'>
 	<link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
+
 	<link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
 
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<link rel="manifest" href="/manifest.json" />
+
 	<script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
+
+	<meta name="theme-color" content="#1976d2" />
+	<noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
