--- a/public/index.html
+++ b/public/index.html
@@ -2,41 +2,40 @@
 <html lang="en">
 
 <head>
-	<meta charset='utf-8'>
+    <meta charset='utf-8'>
 
-	<meta name="viewport"
-		content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="format-detection" content="telephone=no" />
-	<meta name="msapplication-tap-highlight" content="no" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-	<!-- add to homescreen for ios    -->
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <!-- add to homescreen for ios    -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-	<title>Ionic Svelte App</title>
+    <title>Ionic Svelte App</title>
 
-	<script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
-	<script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel="icon" type="image/png" href="/favicon.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
+    <link rel='icon' type='image/png' href='/favicon.png'>
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/favicon.png" sizes="192x192" />
 
-	<link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
+    <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
 
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
+    <link rel='stylesheet' href='/global.css'>
+    <link rel='stylesheet' href='/build/bundle.css'>
 
-	<link rel="manifest" href="/manifest.json" />
-	<meta name="theme-color" content="#1976d2" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1976d2" />
 
-	<script defer src='/build/bundle.js'></script>
+    <script defer src='/build/bundle.js'></script>
 </head>
 
 <body>
-	<noscript>Please enable JavaScript to continue using this application.</noscript>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 
 </html>
