--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,12 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <title>Ionic Svelte App</title>
+    <title>Ionic UI Companion App - svelte power!</title>
+    <meta name="description" content="A developer's companion app to Ionic greatness powered by svelte">
+    <meta name="og:title" property="og:title" content="Ionic UI Companion App - svelte power!">
+    <meta name="og:description" property="og:description" content="A developer's companion app to Ionic greatness powered by svelte">
+    <meta name="robots" content="index, follow">
+
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
