--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-    <title>Ionic UI Companion App - svelte power!</title>
+    <title>Ionic UI Boilerplate - svelte power!</title>
     <meta name="description" content="A developer's companion app to Ionic greatness powered by svelte">
     <meta name="og:title" property="og:title" content="Ionic UI Companion App - svelte power!">
     <meta name="og:description" property="og:description" content="A developer's companion app to Ionic greatness powered by svelte">
