--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 
     <script defer type="module" src='/bundle/main.js'></script>
 
-    <link rel='stylesheet' href='/assets/libs/fontawesome-free/css/all.css'>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css'>
 
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
