Fixed CDN issue

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,10 @@
 
     <script defer type="module" src='/bundle/main.js'></script>
 
-    <script type="module" src='/assets/libs/@ionic/core/dist/ionic/ionic.js'></script>
-    <link rel="stylesheet" href="/assets/libs/@ionic/core/css/ionic.bundle.css" />
+    <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@4.11.10/dist/ionic/ionic.esm.js"></script>
+    <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@4.11.10/dist/ionic/ionic.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@4.11.10/css/ionic.bundle.css" />
+
 </head>
 
 <body>
