--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,19 @@
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
+    <script>
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('/service-worker.js')
+                .then(function(registration) {
+                    // Successful registration
+                    console.log('Hooray. Registration successful, scope is:', registration.scope);
+                }).catch(function(err) {
+                    // Failed registration, service worker won’t be installed
+                    console.log('Whoops. Service worker registration failed, error:', error);
+                });
+        }
+    </script>
+
 </head>
 
 <body>
