--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <link rel="apple-touch-icon" href="/favicon.png" sizes="180x180" />
 
     <link rel='stylesheet' href='/global.css'>
-    <link rel='stylesheet' href='/build/bundle.css'>
+    <link rel='stylesheet' href='/bundle/bundle.css'>
 
     <link rel="manifest" href="/manifest.json" />
     <meta name="theme-color" content="#1976d2" />
@@ -39,15 +39,21 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core/css/ionic.bundle.css" />
 
     <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
-                .then(function(registration) {
-                    // Successful registration
-                    console.log('Hooray. Registration successful, scope is:', registration.scope);
-                }).catch(function(err) {
-                    // Failed registration, service worker won’t be installed
-                    console.log('Whoops. Service worker registration failed, error:', error);
-                });
+        if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
+
+            if ('serviceWorker' in navigator) {
+                navigator.serviceWorker.register('/service-worker.js')
+                    .then(function(registration) {
+                        // Successful registration
+                        console.log('Hooray. Registration successful, scope is:', registration.scope);
+                    }).catch(function(err) {
+                        // Failed registration, service worker won’t be installed
+                        console.log('Whoops. Service worker registration failed, error:', error);
+                    });
+            }
+
+        } else {
+            console.log('Running localhost - no service worker registered')
         }
     </script>
 
