--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
 <head>
     <meta charset='utf-8'>
 
-    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="viewport"
+        content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-tap-highlight" content="no" />
 
@@ -16,7 +17,8 @@
     <title>Ionic Companion</title>
     <meta name="description" content="A developer's companion app to Ionic greatness powered by svelte">
     <meta name="og:title" property="og:title" content="Ionic Companion">
-    <meta name="og:description" property="og:description" content="A developer's companion app to Ionic greatness, powered by svelte">
+    <meta name="og:description" property="og:description"
+        content="A developer's companion app to Ionic greatness, powered by svelte">
     <meta name="robots" content="index, follow">
 
     <link rel='icon' type='image/png' href='/favicon.png'>
@@ -37,16 +39,16 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/css/ionic.bundle.css" />
-
+    <script src="//unpkg.com/brain.js"></script>
     <script>
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
 
             if ('serviceWorker' in navigator) {
                 navigator.serviceWorker.register('/service-worker.js')
-                    .then(function(registration) {
+                    .then(function (registration) {
                         // Successful registration
                         console.log('Hooray. Registration successful, scope is:', registration.scope);
-                    }).catch(function(err) {
+                    }).catch(function (err) {
                         // Failed registration, service worker won’t be installed
                         console.log('Whoops. Service worker registration failed, error:', error);
                     });
@@ -61,6 +63,7 @@
 
 <body>
     <noscript>Please enable JavaScript to continue using this application.</noscript>
+
 </body>
 
 </html>
