--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,10 @@
     <script type="module" src="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/dist/ionic/ionic.esm.js"></script>
     <script nomodule src="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/dist/ionic/ionic.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@ionic/core@5.4.0/css/ionic.bundle.css" />
-    <script src="//unpkg.com/brain.js"></script>
+    <!-- <script src="//unpkg.com/brain.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Faker/3.1.0/faker.min.js"
+        integrity="sha512-/seDHxVfh1NvFUscAj8GsHQVZJvr2jjAoYsNL7As2FCaFHUHYIarl3sRCvVlFgyouVNiRgHIebyLKjpgd1SLDw=="
+        crossorigin="anonymous"></script>
     <script>
         if (location.hostname !== "localhost" && location.hostname !== "127.0.0.1") {
 
